# hdds

./: .gitignore  .gitleaksignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  publish-all.sh
crates/hdds/: Cargo.toml  build.rs
crates/hdds-c/: Cargo.toml  build.rs  cbindgen.toml  hdds.h
crates/hdds-c/examples/: Makefile  basic_pubsub.c
crates/hdds-c/src/: condition_ffi.rs  dynamic_ffi.rs  filter_ffi.rs  info.rs  lib.rs  listener.rs  logging.rs  pubsub.rs  qos.rs  rmw.rs  rpc_ffi.rs  security_config.rs  telemetry.rs  transport_config.rs
crates/hdds-c/tests/: rmw_intra_process.rs
crates/hdds-codegen/: Cargo.toml
crates/hdds-codegen/src/: lib.rs
crates/hdds-discovery-server/: Cargo.toml  Dockerfile  README.md
crates/hdds-discovery-server/src/: config.rs  main.rs  server.rs
crates/hdds-gateway/: Cargo.toml
crates/hdds-gateway/src/: client.rs  handlers.rs  main.rs  routes.rs
crates/hdds-gateway/static/: app.js  index.html
crates/hdds-logger/: Cargo.toml
crates/hdds-logger/src/: collector.rs  filter.rs  formatter.rs  lib.rs  main.rs  output.rs
crates/hdds-micro/: Cargo.toml
crates/hdds-micro-c/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  hdds_micro.h
crates/hdds-micro-c/src/: lib.rs
crates/hdds-micro/esp32-example/: .gitignore  Cargo.toml  build.rs  sdkconfig.defaults
crates/hdds-micro/examples/: temperature_pubsub.rs  test_encoding.rs
crates/hdds-micro/scripts/: esp32_monitor.py  esp32_publisher.py  test_pc_to_esp32.sh
crates/hdds-micro/src/: error.rs  lib.rs
crates/hdds-persistence/: Cargo.toml
crates/hdds-persistence/src/: config.rs  dds_interface.rs  hdds_interface.rs  lib.rs  main.rs  publisher.rs  sqlite.rs  store.rs  subscriber.rs
crates/hdds-recording/: Cargo.toml
crates/hdds-recording/src/: filter.rs  lib.rs  player.rs  recorder.rs  rotation.rs
crates/hdds-router/: Cargo.toml
crates/hdds-router/examples/: discovery_server_config.rs  domain_bridge_ds.rs  router_e2e.rs
crates/hdds-router/src/: config.rs  lib.rs  main.rs  route.rs  router.rs  transform.rs
crates/hdds-telemetry-otlp/: Cargo.toml
crates/hdds-telemetry-otlp/examples/: otlp_basic.rs
crates/hdds-telemetry-otlp/src/: lib.rs  metrics.rs
crates/hdds/benches/: discovery.rs  read_latency.rs  reader_api.rs  runtime.rs  stress_multi_node.rs  stress_phase7a.rs  stress_utils.rs  throughput.rs  write_latency.rs
crates/hdds/examples/: basic_pubsub.rs  cross_lang_test.rs  debugger_demo.rs  debugger_demo_alt.rs  fastdds_publisher_simple.rs  fastdds_subscriber_simple.rs  hdds_list_participants.rs  latency_benchmark.rs  live_capture.rs  micro_interop.rs  multi_node_discovery.rs  multi_node_pubsub.rs  reliable_demo.rs  reliable_qos_demo.rs  rti_temperature_subscriber.rs  rti_temperature_subscriber_idlgen.rs  rti_temperature_subscriber_v65.rs  shm_multiprocess.rs  temperature_generated.rs  temperature_publisher_loop.rs  temperature_pubsub.rs  temperature_rti.rs  temperature_validation.rs  test_spdp_discovery.rs  test_two_participant_discovery.rs  tsn_latency.rs  tsn_probe.rs  tsn_pubsub.rs  tsn_rtt.rs  typed_cross_lang_test.rs  waitset_demo.rs
crates/hdds/fuzz/: Cargo.toml
crates/hdds/src/: cdr.rs  config.rs  lib.rs  qos.rs  rmw.rs
crates/hdds/tests/: discovery_integration.rs  doc_integration.rs  frag_data_frag.rs  frag_nack_frag.rs  frag_nack_frag_loss.rs  golden_vectors.rs  interop_reliable_fastdds.rs  mobility_e2e.rs  pl_cdr2_poly3d.rs  publisher_subscriber.rs  qos_deadline.rs  qos_destination_order.rs  qos_durability_service.rs  qos_entity_factory.rs  qos_latency_budget.rs  qos_lifespan.rs  qos_liveliness.rs  qos_metadata.rs  qos_ownership.rs  qos_partition.rs  qos_presentation.rs  qos_reader_data_lifecycle.rs  qos_resource_limits.rs  qos_time_based_filter.rs  qos_transport_priority.rs  qos_writer_data_lifecycle.rs  reliable_repair.rs  rtps_conformance.rs  rtps_port_mapping.rs  serialization_roundtrip.rs  stress_discovery.rs  stress_participants.rs  stress_reconnection.rs  stress_topics.rs  transient_local_late_joiner.rs  unicast_routing_e2e.rs
crates/rmw-hdds/: Cargo.toml
crates/rmw-hdds/src/: env_config.rs  ffi.rs  lib.rs  util.rs
fuzz/: Cargo.toml  run_all_fuzzers.sh
fuzz/fuzz_targets/: fuzz_rtps_control.rs  fuzz_rtps_sedp.rs  fuzz_rtps_spdp.rs  fuzz_xml_permissions.rs
rmw_hdds/: CMakeLists.txt  package.xml
rmw_hdds/include/hdds_cpp/: bridge.h  codecs.hpp
rmw_hdds/include/rmw_hdds/: ffi.h  qos.h  types.h
rmw_hdds/src/: codec_log.cpp  codec_parameter_event.cpp  rmw_guard_condition.c  rmw_init.c  rmw_node.c  rmw_publisher.c  rmw_qos.c  rmw_stubs.c  rmw_subscription.c  rmw_wait.c
rmw_hdds/src/cpp/: bridge.cpp
sdk/c/: CMakeLists.txt  generate_header.sh
sdk/c/examples/: CMakeLists.txt  hello_world.c  qos_demo.c  telemetry_demo.c  version_info.c  waitset_demo.c
sdk/c/include/: hdds.h
sdk/c/tests/: CMakeLists.txt  test_participant.c  test_qos.c  test_runner.c  test_waitset.c
sdk/cxx/: CMakeLists.txt
sdk/cxx/examples/: CMakeLists.txt  basic_pubsub.cpp
sdk/cxx/include/: hdds.hpp  hdds_listener.hpp
sdk/cxx/src/: logging.cpp  participant.cpp  pubsub.cpp  qos.cpp  reader.cpp  telemetry.cpp  waitset.cpp  writer.cpp
sdk/cxx/tests/: CMakeLists.txt
sdk/python/: pyproject.toml
sdk/python/examples/: HelloWorld.idl  basic_pubsub.py  hello_types.py  hello_world.py
sdk/python/hdds/: __init__.py  _native.py  conditions.py  entities.py  listener.py  logging.py  participant.py  qos.py  telemetry.py  waitset.py
sdk/python/tests/: conftest.py  test_integration.py  test_qos.py
sdk/rust/: Cargo.toml
sdk/rust/examples/: persistence_raw.rs
sdk/rust/src/: lib.rs
tools/hdds-admin/: Cargo.toml
tools/hdds-admin/src/: main.rs
tools/hdds-convert-qos/: Cargo.toml
tools/hdds-convert-qos/src/: conversion.rs  main.rs  rti_loader.rs
tools/hdds-debugger/: Cargo.toml
tools/hdds-discovery-dump/: Cargo.toml
tools/hdds-gen/: Cargo.toml
tools/hdds-gen/src/: lib.rs  (+2 more)
tools/hdds-latency-probe/: Cargo.toml
tools/hdds-shm-viewer/: Cargo.toml
tools/hdds-stress/: Cargo.toml
tools/hdds-topic-echo/: Cargo.toml
(+1061 files in other folders)
