<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_hdds</name>
  <version>0.8.0</version>
  <description>ROS 2 RMW implementation using HDDS middleware</description>
  <maintainer email="contact@hdds.dev">HDDS Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core RMW dependencies -->
  <depend>rmw</depend>
  <depend>rcutils</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_typesupport_interface</depend>
  
  <!-- Type support -->
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosgraph_msgs</depend>
  
  <!-- Discovery & graph -->
  <depend>rcl_logging_interface</depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
