# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright (c) 2025-2026 naskel.com

[package]
name = "hdds-router"
version.workspace = true
edition = "2021"
license = "MIT"
description = "HDDS DDS Routing Service - Domain bridging and topic transformation"
repository = "https://git.hdds.io/hdds/hdds.git"
readme.workspace = true
keywords = ["dds", "routing", "middleware", "pubsub"]
categories = ["network-programming"]

[[bin]]
name = "hdds-router"
path = "src/main.rs"

[dependencies]
hdds = { path = "../hdds", version = "1.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
