[package]
name = "hdds"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["xtypes", "qos-loaders"]
rti-hexdump = []  # Enable verbose RTI packet hex dumps for debugging
telemetry = []
bench-stress = []
logging = []
trace = ["logging"]  # Trace requires logging to be enabled
xtypes = ["dep:md-5"]
type-lookup = ["xtypes"]  # HDDS-only TypeLookup (feature-gated, no vendor interop)
security = ["dep:ring", "dep:x509-parser", "dep:pem", "dep:webpki", "dep:base64", "dep:zeroize"]
qos-loaders = ["dep:roxmltree", "dep:serde", "dep:serde_yaml"]
lowbw-lz4 = ["dep:lz4_flex"]  # LZ4 compression for low-bandwidth transport
tcp-tls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pemfile"]  # TLS support for TCP transport
quic = ["dep:quinn", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:tokio"]  # QUIC transport for NAT traversal and connection migration
cloud-discovery = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio"]  # Cloud discovery backends (Consul, AWS, Azure)
k8s = []  # Kubernetes DNS-based discovery (zero dependencies, uses Headless Services)
rpc = ["dep:tokio"]  # DDS-RPC Request/Reply pattern (requires async runtime)
dialect-coredx = []
dialect-dust = []
dialect-gurum = []
dialect-intercom = []
dialect-opensplice = []
dynamic-types = []  # XTypes Dynamic Language Binding (post-v1.0)

[dependencies]
hdds-codegen = { path = "../hdds-codegen", version = "1.0.8" }
socket2 = "0.5"
crossbeam = "0.8"
dashmap = "6"
arc-swap = "1.7"
lru = "0.12"
parking_lot = "0.12"
local-ip-address = "0.6"
log = "0.4"
md-5 = { version = "0.10", optional = true }
ring = { version = "0.17", optional = true }
x509-parser = { version = "0.16", optional = true }
pem = { version = "3.0", optional = true }
webpki = { version = "0.22", optional = true }
base64 = { version = "0.22", optional = true }
zeroize = { version = "1.7", optional = true }
roxmltree = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9", optional = true }
lz4_flex = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", optional = true, features = ["rt", "time", "sync", "macros"] }
quinn = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio", "rustls"] }
rcgen = { version = "0.13", optional = true }
libc = "0.2"
flate2 = "1.0"
mio = { version = "1.0", features = ["net", "os-poll"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
fastrand = "2"
# interop_types = { path = "../../tests/interop_types" }  # For RTI interop examples (v65+) - DEPRECATED
# Audit and quality tools (binaries, not libraries - for reference only)
# cargo-audit = "0.20"
# cargo-deny = "0.15"
# cargo-tarpaulin = "0.22"

# Modern benchmarks (public API)
[[bench]]
name = "write_latency"
harness = false

[[bench]]
name = "read_latency"
harness = false

[[bench]]
name = "discovery"
harness = false

# Internal benchmarks
[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "reader_api"
harness = false

[[bench]]
name = "throughput"
harness = false

# Stress tests (require feature flag)
[[bench]]
name = "stress_multi_node"
harness = false
required-features = ["bench-stress"]

[[bench]]
name = "stress_phase7a"
harness = false
required-features = ["bench-stress"]
