[package]
name = "hdds-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HDDS Rust SDK examples"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
hdds = { version = "1.0.8", path = "../../crates/hdds" }
