[package]
name = "hdds-discovery-dump"
version = "0.1.0"
edition = "2021"
description = "Dump live DDS discovery state (participants, readers, writers)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/anthropics/hdds"
readme.workspace = true
keywords = ["dds", "rtps", "discovery", "debugging"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "hdds-discovery-dump"
path = "src/main.rs"

[dependencies]
hdds = { version = "1.0.8", path = "../../crates/hdds" }
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
libc = "0.2"
